--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,8 @@ body {
     font-family: Figtree, sans-serif;
     font-size: 16px;
     color: hsl(0, 0%, 7%);
-    line-height: 1.5;
+    line-height: 150%;
+    letter-spacing: 0;
 }
 
 main {
@@ -72,4 +73,5 @@ main {
 .author > p { 
     font-weight: 800;
     margin-left: 12px;
+    font-size: 14px;
 }
